--- a/finimalism7.css
+++ b/finimalism7.css
@@ -3960,3 +3960,8 @@ a[href*="shokoanime.com"] {
 .mainDrawer-scrollContainer {
     padding-bottom: 1vh;
 }
+
+.layout-desktop #itemDetailPage .detailPageSecondaryContainer.padded-bottom-page .detailPageContent .detailPagePrimaryContent.padded-right .detailSection .itemDetailsGroup .detailsGroupItem,
+.layout-tv #itemDetailPage .detailPageSecondaryContainer.padded-bottom-page .detailPageContent .detailPagePrimaryContent.padded-right .detailSection .itemDetailsGroup .detailsGroupItem{
+	max-width: 50vw !important;
+}
