switch imgur to ibb

--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -157,7 +157,7 @@
 }
 
 #loginPage {
-	background: url(https://i.imgur.com/gpe0jJc.jpeg) !important; 
+	background: url(https://i.ibb.co/xnWbbLm/bg.jpg) !important; 
 	background-size: cover !important;
 }
 
@@ -279,4 +279,5 @@
 .layout-tv .videoOsdBottom {
 	background: #000a;
 }
+
 
