--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -280,3 +280,34 @@
 	background: #000a;
 }
 
+.detailRibbon::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000ba;
+    background-size: auto;
+  background-size: cover;
+  opacity: 1;
+  z-index: -1;
+  backdrop-filter: saturate(25%) contrast(150%) blur(2px);
+  filter: drop-shadow(0px 3px 4px #000a);
+}
+
+.detailPageSecondaryContainer::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000ba;
+    background-size: auto;
+  background-size: cover;
+  opacity: 1;
+  z-index: -1;
+  backdrop-filter: saturate(25%) contrast(150%) blur(2px);
+  filter: drop-shadow(0px 3px 4px #000a);
+}
