--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap');
 
 #txtCustomCss, #txtLocalCustomCss {
@@ -2968,7 +2967,7 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 }
 
 #itemDetailPage button[data-direction="left"] {
-	right: 3.5em;
+	right: 2.5em;
 	position: absolute;
 	top: 0.5em;
 	z-index: 50;
@@ -3652,7 +3651,7 @@ a[href*="shokoanime.com"] {
 }
 
 #itemDetailPage button[data-direction="right"] {
-	right: 0em;
+	right: -1em;
 	position: absolute;
 	z-index: 50;
 	font-size: 1.5em;
@@ -3885,7 +3884,7 @@ a[href*="shokoanime.com"] {
 
 .layout-desktop #itemDetailPage .padded-top-focusscale.padded-bottom-focusscale.no-padding.emby-scroller,
 .layout-tv #itemDetailPage .padded-top-focusscale.padded-bottom-focusscale.no-padding.emby-scroller {
-	width: 82em;
+	width: 100%;
 	overflow: hidden;
 }
 
