min-width detailPage portraitCard

--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -1924,6 +1924,7 @@ progress::-webkit-progress-value {
 	width: 20em;
 	top: 3.5em;
 	left: 5em;
+	min-width: 265px;
 }
 
 .layout-tv .detailImageContainer .card {
